# eda_kafka_implementation

./: compose.yml  create_topic.sh
consumer/event-consumer/: Dockerfile  pyproject.toml
consumer/event-consumer/event_consumer/: main.py
producer/event_producer/: Dockerfile  pyproject.toml
producer/event_producer/event_producer/: main.py
